Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-118469

[REG 6.3.2 → 6.5.0] qsTranslate function no longer translates if directly bound to property

    XMLWordPrintable

Details

    • Windows
    • 5fc4c09a9 (dev), a95e6dd76 (6.6), 5b63179a2 (tqtc/lts-6.5)

    Description

      In QML, text: qsTranslate("", "welcome") no longer translates the input strings in Qt 6.5.0, whereas it did in Qt 6.3.2.
      text: qsTranslate("", "welcome") + "" or text: {return qsTranslate("", "welcome")} are ways to fix the issue.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            ulherman Ulf Hermann
            neptilo Victor Ripplinger
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes