src/qml/jsruntime/qv4executablecompilationunit.cpp
@@ -973,11 +973,13 @@ QString ExecutableCompilationUnit::translateFrom(TranslationDataIndex index) con
         return context.toUtf8();
     };
 
-    QByteArray context = stringAt(translation.contextIndex).toUtf8();
+    const bool hasContext
+            = translation.contextIndex != QV4::CompiledData::TranslationData::NoContextIndex;
     QByteArray comment = stringAt(translation.commentIndex).toUtf8();
     QByteArray text = stringAt(translation.stringIndex).toUtf8();
     return QCoreApplication::translate(
-                context.isEmpty() ? fileContext() : context, text, comment, translation.number);
+            hasContext ? stringAt(translation.contextIndex).toUtf8() : fileContext(),
+            text, comment, translation.number);
 #endif
 }
 
